--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,9 @@
 .navbar {
   position: sticky;
+  top: 0;
+  z-index: 1000;
   width: 100%;
+  background-color: whitesmoke;
   padding: 0.6rem 2.3rem;
   box-shadow: 0.2rem 0.4rem 1rem 0.2rem rgb(158, 158, 158);
 }
